# horus

./: Cargo.toml  README.md
.github/workflows/: rust.yml
horus_agent/: Cargo.toml
horus_agent/src/: main.rs
horus_autoquant/: Cargo.toml
horus_autoquant/src/: main.rs  reporters.rs
horus_backtesting/: Cargo.toml
horus_backtesting/src/: backtest_report.rs  backtest_simulation.rs  buy_low_sell_high_test.rs  injectable_aggregate.rs  inter_market_arbitrage_test.rs  lib.rs  market_events.rs  market_simulation.rs  markets_event_simulation.rs  simulation_element.rs  test_market_adapter.rs
horus_common/: Cargo.toml
horus_console_demo/: Cargo.toml
horus_console_demo/src/: main.rs
horus_data_streams/: Cargo.toml
horus_data_streams/src/: lib.rs
horus_data_streams/src/models/: mod.rs  time_series_element.rs  tweet.rs
horus_data_streams/src/receivers/: binance_market_data_receiver.rs  data_receiver.rs  lemon_markets_data_receiver.rs  mock_market_data_receiver.rs  mod.rs  twitter_activity_receiver.rs
horus_exchanges/: Cargo.toml
horus_exchanges/src/: lemon_markets.rs  lib.rs  market_connector.rs  mock_exchange_connector.rs
horus_finance/: Cargo.toml
horus_finance/src/: aggregate.rs  lib.rs  market_position.rs  market_snapshot.rs  order.rs  order_filled_result.rs  order_side.rs  placed_order.rs  position.rs  taken_position.rs  time_series_element.rs
horus_order_routing/: Cargo.toml
horus_order_routing/src/: exchange_connector.rs  lemon_markets.rs  lib.rs  mock_exchange_connector.rs  order_router.rs
horus_reporters/: Cargo.toml
horus_reporters/src/: console_reporter.rs  lib.rs  reporter.rs  void_reporter.rs
horus_strategies/: Cargo.toml
horus_strategies/src/: golden_cross.rs  lib.rs
horus_terminal/: Cargo.toml  README.md  angular.json  index.html  karma.conf.js  package-lock.json  package.json
horus_terminal/src/: index.html  main.rs
horus_terminal/src-tauri/: tauri.conf.json
(+37 files in other folders)
