[package]
name = "horus_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# INTERNAL
horus_finance = { path = "../horus_finance" }
horus_strategies = { path = "../horus_strategies" }
horus_exchanges = { path = "../horus_exchanges" }
horus_data_streams = { path = "../horus_data_streams" }

# EXTERNAL
futures = "0.3.21"