[package]
name = "horus_autoquant"
version = "0.1.0"
edition = "2021"

[dependencies]
# INTERNAL
horus_finance = { path = "../horus_finance" }
horus_data_streams = { path = "../horus_data_streams" }
horus_strategies = { path = "../horus_strategies" }
horus_backtesting = { path = "../horus_backtesting" }

# EXTERNAL
chrono = "0.4.19"
colored = "2.0.0"