[package]
name = "horus_backtesting"
version = "0.1.0"
edition = "2021"

[dependencies]
# INTERNAL
horus_finance = { path = "../horus_finance" }
horus_data_streams = { path = "../horus_data_streams" } 
horus_exchanges = { path = "../horus_exchanges" }
horus_strategies = { path = "../horus_strategies" }

# EXTERNAL
chrono = "0.4.19"